[package]
name = "sibaj"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.4.1"
hex-literal = "0.4.1"
clap = { version = "4.4.14", features = ["derive"] }
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
serde_json = "1.0.111"
libc-print = "0.1.22"
